objects/WellsFargo__c.object
<CustomObject>
    <fields>
        <fullName>Well_Fargo_Email_Fields__c</fullName>
        <label>Well Fargo Email Field</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>WellsCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>demo check box</inlineHelpText>
        <label>WellsCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WellsFargo_Picklist__c</fullName>
        <label>WellsFargo Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value01</fullName>
                </value>
                <value>
                    <fullName>Value02</fullName>
                </value>
                <value>
                    <fullName>Value03</fullName>
                </value>
                <value>
                    <fullName>Value04</fullName>
                </value>
                <value>
                    <fullName>Value05</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wells_Fargo_CheckBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wells Fargo CheckBox</label>
        <type>Checkbox</type>
    </fields>
    <label>WellsFargo</label>
    <nameField>
        <label>WellsFargo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WellsFargos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>